--- a/config
+++ b/config
@@ -12,7 +12,7 @@ ngx_feature_name=
 ngx_feature_run=no
 ngx_feature_incs="#include <modsecurity/modsecurity.h>
 #include <stdio.h>"
-ngx_feature_libs=""
+ngx_feature_libs="-lcoraza"
 ngx_feature_test='msc_init();'
 ngx_modsecurity_opt_I=
 ngx_modsecurity_opt_L=
